fix layout bug

--- a/src/components/App/Header.scss
+++ b/src/components/App/Header.scss
@@ -5,7 +5,6 @@
   width: 170rem;
   margin: 0 auto;
   padding-bottom: 2rem;
-  z-index: 2;
 }
 
 .top {
